--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -525,15 +525,15 @@ Implementation applications include various movement forms addressing different 
 
 #### Examples Of Christian Hospice Featuring Landscaped Gardens For Contemplation Prayer Walks
 
-* **Christian Care Hospice (Mesquite, Texas):** This facility boasts "beautifully landscaped gardens" 15. Christian Care \- Mesquite includes "The Courtyard," which features a "secured and inviting sensory garden with raised garden beds and relaxing water feature" 16. The presence of "Dementia-friendly worship" as an activity suggests a faith-based approach 16. While specific Christian themes within the garden are not explicitly detailed, the organization's name and faith-affirming nature strongly imply a garden aligned with Christian values 17.  
-* **Angela Hospice Home Care (Livonia, Michigan):** Their Care Center features a butterfly garden where the landscape and water features are "meant to evoke our senses and wonder for God's creation, along with bringing about a sense of peace" 4. As a "Felician-sponsored ministry," its Christian affiliation is evident 4. The garden's design intentionally connects visitors with nature and fosters a sense of peace and wonder for God's creation 4. A "Commemorative Giving program" suggests potential memorial options on the grounds 24.  
-* **Southwest Christian Care (Union City, Georgia):** This organization features the "Garden of Hope," with a new "Boardwalk connecting the Garden of Hope to the Nature Trail" 13. Spiritual support is central to their mission 13. Notably, they offer the opportunity to "Buy a brick on our Scripture Walkway in the Garden" for a donation 12, explicitly integrating scripture into the garden. The "Garden of Hope" was created as a "peaceful retreat" 25.  
-* **Faith Hospice Care (Grand Rapids, Michigan):** Their Trillium Woods campus includes a "Garden & Prayer Walk," described as a "haven for patients and their loved ones – a serene garden and prayer walk" intended to provide "solace and tranquility" 5. The sentiment "Nature is the art of God; immerse yourself in its beauty to unwind the soul" suggests a Christian perspective 5. There is also an opportunity to name a tree in the garden for a donation 5.  
-* **Franciscan Hospice House (Indianapolis, Indiana):** This facility offers a "Chapel and prayer garden" 29. Franciscan hospice teams strive to continue the ministry of Christ 31. The facility aims to provide a comforting environment rooted in Christian values 30.  
-* **Mercy Health – Anderson Hospital (Cincinnati, Ohio):** Their healing garden incorporates several Christian elements, including a rill blessed with holy water and a statue of Mary saying "yes" to the call to be the mother of God's son 9. These elements symbolize the hospital's Catholic mission and its role in Jesus' healing ministry. The garden is visually connected to the Chapel of Divine Mercy 9.  
+* **Christian Care Hospice (Mesquite, Texas):** This facility boasts "beautifully landscaped gardens". Christian Care Mesquite includes "The Courtyard," which features a "secured and inviting sensory garden with raised garden beds and relaxing water feature" 16. The presence of "Dementia-friendly worship" as an activity suggests a faith-based approach. While specific Christian themes within the garden are not explicitly detailed, the organization's name and faith-affirming nature strongly imply a garden aligned with Christian values.  
+* **Angela Hospice Home Care (Livonia, Michigan):** Their Care Center features a butterfly garden where the landscape and water features are "meant to evoke our senses and wonder for God's creation, along with bringing about a sense of peace". As a "Felician-sponsored ministry," its Christian affiliation is evident. The garden's design intentionally connects visitors with nature and fosters a sense of peace and wonder for God's creation. A "Commemorative Giving program" suggests potential memorial options on the grounds.  
+* **Southwest Christian Care (Union City, Georgia):** This organization features the "Garden of Hope," with a new "Boardwalk connecting the Garden of Hope to the Nature Trail". Spiritual support is central to their mission. Notably, they offer the opportunity to "Buy a brick on our Scripture Walkway in the Garden" for a donation, explicitly integrating scripture into the garden. The "Garden of Hope" was created as a "peaceful retreat".  
+* **Faith Hospice Care (Grand Rapids, Michigan):** Their Trillium Woods campus includes a "Garden & Prayer Walk," described as a "haven for patients and their loved ones – a serene garden and prayer walk" intended to provide "solace and tranquility". The sentiment "Nature is the art of God; immerse yourself in its beauty to unwind the soul" suggests a Christian perspective. There is also an opportunity to name a tree in the garden for a donation.  
+* **Franciscan Hospice House (Indianapolis, Indiana):** This facility offers a "Chapel and prayer garden". Franciscan hospice teams strive to continue the ministry of Christ. The facility aims to provide a comforting environment rooted in Christian values.  
+* **Mercy Health – Anderson Hospital (Cincinnati, Ohio):** Their healing garden incorporates several Christian elements, including a rill blessed with holy water and a statue of Mary saying "yes" to the call to be the mother of God's son. These elements symbolize the hospital's Catholic mission and its role in Jesus' healing ministry. The garden is visually connected to the Chapel of Divine Mercy.  
 * **Hospice & Community Care (Rock Hill, South Carolina):** The campus features various gardens and outdoor therapy areas, including a "Sanctuary- surrounding the chapel" and a "Veteran- with monuments honoring each branch of service" 11. The "Marie Bott Sanctuary" is a non-denominational space for prayer and meditation often used for memorial services. The gardens aim to offer space for worship and contemplation.  
 * **Franciscan Hospice (North Tacoma OR University Place, Washington):** This facility mentions "Gardens with walkways and a meditative setting" alongside a chapel for meditation or prayer 33. The Franciscan affiliation suggests a Christian foundation.  
-* **Astyn's Garden at Lubbock Christian University (Lubbock, Texas):** While not at a hospice facility, this memorial garden at a Christian university features a mural with Christian themes depicting biblical concepts through butterfly imagery 7. It provides a space for remembrance for families who have experienced loss, potentially including those from Hospice of Lubbock.
+* **Astyn's Garden at Lubbock Christian University (Lubbock, Texas):** While not at a hospice facility, this memorial garden at a Christian university features a mural with Christian themes depicting biblical concepts through butterfly imagery. It provides a space for remembrance for families who have experienced loss, potentially including those from Hospice of Lubbock.
 
 
 
