--- a/FOSS/4.md
+++ b/FOSS/4.md
@@ -532,7 +532,7 @@ Implementation applications include various movement forms addressing different 
 * **Franciscan Hospice House (Indianapolis, Indiana):** This facility offers a "Chapel and prayer garden". Franciscan hospice teams strive to continue the ministry of Christ. The facility aims to provide a comforting environment rooted in Christian values.  
 * **Mercy Health – Anderson Hospital (Cincinnati, Ohio):** Their healing garden incorporates several Christian elements, including a rill blessed with holy water and a statue of Mary saying "yes" to the call to be the mother of God's son. These elements symbolize the hospital's Catholic mission and its role in Jesus' healing ministry. The garden is visually connected to the Chapel of Divine Mercy.  
 * **Hospice & Community Care (Rock Hill, South Carolina):** The campus features various gardens and outdoor therapy areas, including a "Sanctuary- surrounding the chapel" and a "Veteran- with monuments honoring each branch of service". The "Marie Bott Sanctuary" is a non-denominational space for prayer and meditation often used for memorial services. The gardens aim to offer space for worship and contemplation.  
-* **Franciscan Hospice (North Tacoma OR University Place, Washington):** This facility mentions "Gardens with walkways and a meditative setting" alongside a chapel for meditation or prayer 33. The Franciscan affiliation suggests a Christian foundation.  
+* **Franciscan Hospice (North Tacoma OR University Place, Washington):** This facility mentions "Gardens with walkways and a meditative setting" alongside a chapel for meditation or prayer. The Franciscan affiliation suggests a Christian foundation.  
 * **Astyn's Garden at Lubbock Christian University (Lubbock, Texas):** While not at a hospice facility, this memorial garden at a Christian university features a mural with Christian themes depicting biblical concepts through butterfly imagery. It provides a space for remembrance for families who have experienced loss, potentially including those from Hospice of Lubbock.
 
 
